Update mc-spigot-install.sh